--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/weiqianyuejuminxinxi.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/weiqianyuejuminxinxi.html
@@ -18,6 +18,15 @@
 	</head>
 
 	<body>
+    <div class="h45">
+        <div class="demo-comtop">
+            <a class="mui-action-back" id="mui-action-back"></a>
+            <!--团队成员医生信息页-->
+            <h1>居民资料</h1>
+        </div>
+    </div>
+
+
 		<script type="text/html" id="detail_info_tmpl">
 			
 			<ul class="c-list c-border-b" >
