医生app 团队成员页面修改、后台签约确认接口修改

--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
@@ -187,14 +187,15 @@
 
 
 		mui("#group").on("tap", "li", function() {
-			var id = $(this).attr("data-id");	
-			mui.openWindow({
-				url: "yishengxinxi.html",
-				id: id,
-				extras: {
-					id: id
-				}
-			});
+			var id = $(this).attr("data-id");
+            openWindow('yishengxinxi.html?doctorId='+id);
+//			mui.openWindow({
+//				url: "yishengxinxi.html",
+//				id: id,
+//				extras: {
+//					id: id
+//				}
+//			});
 //			openWebview("yishengxinxi.html?id="+id);
 		});
 		/*
