--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/gerenziliao.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/gerenziliao.html
@@ -23,7 +23,7 @@
         <div class="demo-comtop">
             <a class="mui-action-back" id="mui-action-back"></a>
             <!--团队成员医生信息页-->
-            <h1>医生主页</h1>
+            <h1>个人资料</h1>
         </div>
     </div>
 
