--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
@@ -28,7 +28,7 @@
         <div>
             <div class="h45">
                 <div class="demo-comtop">
-                    <a class="mui-action-back"></a>
+                    <a class="mui-action-back" id="mui-action-back"></a>
                     <h1 style="font-size: 20px; line-height: 36px;">居民首页</h1>
                 </div>
             </div>
@@ -38,7 +38,7 @@
 		<div id="docInfo" style="height: 120px; z-index: 100;"></div>
 		
 
-		<div id="wrapper" style="margin-top: 120px;height: 100%">
+		<div id="wrapper" style="margin-top: 170px;height: 100%">
 			<div class="iScroller">
 				<ul class="c-lab-mor pt-tab c-f16">
 					<li id="tizhengLi" class="hit"><a href="#">体征记录</a></li>
@@ -158,7 +158,7 @@
 		</div>
 
 		<!-- 时间过滤框 -->
-		<dl class="jhadd bgc-fff dt-date-condition f-dn">
+		<dl class="jhadd bgc-fff dt-date-condition f-dn" style="margin-top: 45px;">
 			<dt class="tit p10 border-bom dt-part-time7" data-id="1">
 				<a href="javascript:void(0);" class="more">
 	    			<i class="icon del"></i>
@@ -218,6 +218,7 @@
 		<script type="text/javascript" src="../../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../../js/app.js"></script>
 		<script type="text/javascript" src="../../../js/common_http.js"></script>
+        <script src="../js/common.js" type="text/javascript"></script>
 		<script type="text/javascript" src="../js/health-index.js"></script>
 		<script type="text/javascript" src="../js/xuetang.js"></script>
 		<script type="text/javascript" src="../js/xueya.js"></script>
@@ -226,7 +227,7 @@
 		<script src="../js/iscroll-pull-up-down.js"></script>-->
 		<script src="../../../js/template.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/templateHelp.js" type="text/javascript"></script>
-		<script src="../js/common.js" type="text/javascript"></script>
+
 		<script src="../js/juminxinxi.js" type="text/javascript"></script>
 	</body>
 
