医生端子页面的子页面跳转修改

--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
@@ -181,7 +181,7 @@
 	
 		$('#pati_info').on("tap","ul", function(){
 			var patientId = $(this).attr("data-id");
-            openWindow('weiqianyuejuminxinxi.html?patientId='+patientId);
+            openWindow('weiqianyuejuminxinxi.html?patientId='+patientId+'&supPage=qianyueshenhe');
 //            mui.openWindow({
 //                url: 'weiqianyuejuminxinxi.html?patientId='+patientId,
 //                id: 'weiqianyuejuminxinxi.html',
