后台接口测试参数注释

--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
@@ -60,7 +60,7 @@
 		</div>
 	</body>
 	<script type="text/html" id="team_info_tmpl">
-		<h4><span class="color-iconfont mr15"><img src="../../../common/images/demo-por01.png"></span>我的团队&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp{{teamName}}</h4>
+		<h4><span class="color-iconfont mr15"><img src="../../../common/images/demo-por01.png"></span>我的团队&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{teamName}}</h4>
 	</script>
 
 	<script type="text/html" id="doc_info_tmpl">
@@ -135,11 +135,17 @@
 				
 				function success(res) {
 					if (res.status == 200) {
-						console.log(JSON.stringify(res.data));
-						var contTeam = template("team_info_tmpl",res.data[0]);
-						document.getElementById("doc_team_info").innerHTML = contTeam;
-						var cont = template("doc_list_tmpl", {data:res.data[0].list});
-						document.getElementById("group").innerHTML = cont;
+                        debugger
+                        if(res.data.length>0){
+                            var contTeam = template("team_info_tmpl",res.data[0]);
+                            document.getElementById("doc_team_info").innerHTML = contTeam;
+                            var cont = template("doc_list_tmpl", {data:res.data[0].list});
+                            document.getElementById("group").innerHTML = cont;
+                        }else{
+                            var contTeam = template("team_info_tmpl",{teamName:'无'});
+                            document.getElementById("doc_team_info").innerHTML = contTeam;
+                        }
+
 					}
 			});
 		}
