--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/start-sign.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/start-sign.html
@@ -53,10 +53,10 @@
 		<li class="n-list-cover">
 			<div class="n-list-key c-666"><i class="required" style="display: none;"></i>身份证号</div>
 			<div class="n-list-info pl10">
-				<input type="text" class="c-input width-100" maxlength="18" id="idCard" placeholder="请输入身份证号" readonly="readonly" style="pointer-events: none;"/>
+				<input type="text" class="c-input width-100" maxlength="18" id="idCard" placeholder="" readonly="readonly" style="pointer-events: none;"/>
 			</div>
 		</li>
-        <li class="n-list-cover" style="display: none;">
+        <li class="n-list-cover" >
             <div class="n-list-key c-666">手机号码</div>
             <div class="n-list-info pl10">
                 <input type="tel" id="mobile" maxlength="11" class="c-input width-100" />
