--- a/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
+++ b/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
@@ -166,7 +166,7 @@
 					<h4>联系人电话</h4>
 				</div>
 				<div class="c-list-info c-t-right" >
-					<input type="text" id="lineman" class="width-100 c-t-right" placeholder="联系人电话">
+					<input type="text" id="lineman" class="width-100 c-t-right" placeholder="">
 				</div>
 			</li>
 		</ul>
