--- a/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
+++ b/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
@@ -65,7 +65,7 @@
 					<h4>姓名</h4>
 				</div>
 				<div class="c-list-info c-t-right" >
-				    <input type="text" id="name" class="width-100 c-t-right" placeholder="请输入姓名" value="" readonly="readonly"/>
+				    <input type="text" id="name" class="width-100 c-t-right" placeholder="" value="" readonly="readonly"/>
 				</div>
 			</li>
 			<li class="c-list-text c-list-link">
@@ -91,7 +91,7 @@
 					<h4>家庭地址</h4>
 				</div>
 				<div class="c-list-info c-t-right" >
-					<input type="text" id="address" class="width-100 c-t-right" placeholder="请输入地址">
+					<input type="text" id="address" class="width-100 c-t-right" placeholder="">
 				</div>
 			</li>
 			<!--<li class="c-list-text c-list-link">-->
