隐去手工录入功能

--- a/wlyy-yc/src/main/resources/wx/html/tzzb/html/health-record.html
+++ b/wlyy-yc/src/main/resources/wx/html/tzzb/html/health-record.html
@@ -171,9 +171,9 @@
 		</dt>
 	</dl>
     
-    <div id="footer">
-			<div class="f-vam f-mr10 add-icon f-ib div-add-btn"></div>
-	</div>
+    <!--<div id="footer">-->
+			<!--<div class="f-vam f-mr10 add-icon f-ib div-add-btn"></div>-->
+	<!--</div>-->
     <div class="div-dialog-content div-tizhengtezheng f-dn">
 		<div class="f-vam f-mr10 addxuetang f-ib"></div>
 		<div class="f-vam f-mr10 addxueya f-ib"></div>
