--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/weiqianyuejuminxinxi.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/weiqianyuejuminxinxi.html
@@ -18,13 +18,13 @@
 	</head>
 
 	<body>
-    <div class="h45">
+    <!--<div class="h45">
         <div class="demo-comtop">
             <a class="mui-action-back" id="mui-action-back"></a>
-            <!--团队成员医生信息页-->
+            &lt;!&ndash;团队成员医生信息页&ndash;&gt;
             <h1>居民资料</h1>
         </div>
-    </div>
+    </div>-->
 
 
 		<script type="text/html" id="detail_info_tmpl">
