--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yiqianyue.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yiqianyue.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta charset="utf-8">
-		<title>已签约</title>
+		<title>签约居民管理</title>
 		<link rel="stylesheet" type="text/css" href="../../../common/iconfont/iconfont.css">
 		<link rel="stylesheet" href="../../../common/cross/css/cross.css" type="text/css" />
 		<link rel="stylesheet" href="../../../common/cross/css/cross.ui.css" type="text/css" />
