--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
@@ -59,13 +59,13 @@
 </head>
 
 <body>
-<!--<div class="h45">
+<div class="h45">
 	<div class="demo-comtop">
 		<a class="mui-action-back" id="mui-action-back"></a>
 		&lt;!&ndash;团队成员医生信息页&ndash;&gt;
 		<h1>签约审核</h1>
 	</div>
-</div>-->
+</div>
 <div class="main" style="overflow: auto;">
 
 	<div class="bgc-fff">
