我的设备-无数据提示图片问题。

--- a/wlyy-yc/src/main/resources/wx/html/wdsb/html/my-equipments.html
+++ b/wlyy-yc/src/main/resources/wx/html/wdsb/html/my-equipments.html
@@ -21,7 +21,7 @@
     <body>
     <div class="main">
     	<div id="no_result_wrap" class="c-dn">
-			<img class="no-result-img" src="../../../images/shujuweikong_img.png" />
+			<img class="no-result-img" style="width: 100%" src="../../../images/shujuweikong_img.png" />
 			<div class="f-fs14 c-323232 c-t-center">抱歉，暂未找到符合条件的结果。</div>
 		</div>
   		<div id="device_list_view">
