1.App登录时，更新Token 2.修改APP端题头部分，TODO暂时题头未按功能变化

--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/health-record.html
@@ -25,15 +25,15 @@
 
 	<body>
 
-        <div>
-            <div class="h45">
-                <div class="demo-comtop">
-                    <a class="mui-action-back" id="mui-action-back"></a>
-                    <h1 style="font-size: 20px; line-height: 36px;">居民首页</h1>
-                </div>
-            </div>
-        </div>
-
+        <!--<div>-->
+            <!--<div class="h45">-->
+                <!--<div class="demo-comtop">-->
+                    <!---->
+                    <!--<h1 style="font-size: 20px; line-height: 36px;">居民首页</h1>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+		<a class="mui-action-back" id="mui-action-back"></a>
 
 		<div id="docInfo" style="height: 120px; z-index: 100;"></div>
 		
