--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/mine.html
@@ -20,12 +20,14 @@
 
 	<body>
 		<div class="main">
-			<div class="h45">
-				<div class="demo-comtop">
-					<!--<a class="mui-action-back"></a>-->
-					<h1>我的</h1>
-				</div>
-			</div>
+			<!--<div class="h45">-->
+				<!--<div class="demo-comtop">-->
+					<!---->
+					<!--<h1>我的</h1>-->
+				<!--</div>-->
+			<!--</div>-->
+
+			<a class="mui-action-back"></a>
 			<div class="bgc-fff">
 				<div class="c-100 c-position-r" id="doc_info">
 					
