--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yishengxinxi.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yishengxinxi.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Expires" content="0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta charset="utf-8">
-		<title></title>
+		<title>医生详情</title>
 		<link rel="stylesheet" type="text/css" href="../../../common/iconfont/iconfont.css">
 		<link rel="stylesheet" type="text/css" href="../../../common/cross/css/cross.css">
 		<link rel="stylesheet" href="../../../common/cross/css/cross.ui.css" type="text/css" />
@@ -31,13 +31,14 @@
 
 	<body>
 		<div class="c-main">
-			<div class="h45">
-				<div class="demo-comtop">
-					<a class="mui-action-back" id="mui-action-back"></a>
-					<!--团队成员医生信息页-->
-					<h1>医生详情</h1>
-				</div>
-			</div>
+			<!--<div class="h45">-->
+				<!--<div class="demo-comtop">-->
+					<!---->
+					<!--&lt;!&ndash;团队成员医生信息页&ndash;&gt;-->
+					<!--<h1>医生详情</h1>-->
+				<!--</div>-->
+			<!--</div>-->
+			<a class="mui-action-back" id="mui-action-back"></a>
 			<div class="sdoc-top smil short clearfix">
 				<span class="sdimg fl">
 					<img id="photo" src="" class="c-images-cycle">
