--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/gerenziliao.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/gerenziliao.html
@@ -19,13 +19,13 @@
 	</head>
 
 	<body>
-    <div class="h45">
-        <div class="demo-comtop">
-            <a class="mui-action-back" id="mui-action-back"></a>
-            <!--团队成员医生信息页-->
-            <h1>个人资料</h1>
-        </div>
-    </div>
+    <!--<div class="h45">-->
+        <!--<div class="demo-comtop">-->
+            <!--<a class="mui-action-back" id="mui-action-back"></a>-->
+            <!--&lt;!&ndash;团队成员医生信息页&ndash;&gt;-->
+            <!--<h1>个人资料</h1>-->
+        <!--</div>-->
+    <!--</div>-->
 
 
 	
