不是未签约，隐藏按钮

--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-info.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-info.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="h61">
 			<div class="plr15 pb15 bottom-btn-box c-border-t" id="btnSign">
-				<a onclick="startSign()" class="c-btn c-btn-4dcd70 c-btn-full c-btn-radius c-f18">与其团队签约</a>
+				<a onclick="startSign()" class="c-btn c-btn-4dcd70 c-btn-full c-btn-radius c-f18">申请签约</a>
 			</div>
 		</div>
 		<script src="../../../js/jquery/2.1.3/jquery.js"></script>
