前端分页，团队主页协议跳转

--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-homepage.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/doctor-homepage.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Expires" content="0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta charset="utf-8">
-		<title>医生主页</title>
+		<title>团队主页</title>
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.css" />
 		<link rel="stylesheet" type="text/css" href="../../../css/cross.ui.css" />
 		<!--<link rel="stylesheet" type="text/css" href="../../../iconfont/iconfont.css" />-->
@@ -72,7 +72,7 @@
 		            </div>
 		        </div>
 		        <ul class="c-list sever-list">
-		            <li class="c-list-cover c-list-text" onclick="changeAgreement()" style="height: 80px;">
+		            <li class="c-list-cover c-list-text" onclick="toArgument()" style="height: 80px;">
 		                <div style="padding-top: 15px; padding-bottom: 5px;">
 		                    <img src="../../../images/jiatingqianyue_icon.png" style="width: 45px; height: 45px;"/>
 		                </div>
