隐去手工录入功能

--- a/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
+++ b/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
@@ -91,82 +91,20 @@
 					<h4>家庭地址</h4>
 				</div>
 				<div class="c-list-info c-t-right" >
-					<input type="text" id="address" class="width-100 c-t-right" placeholder="">
+					<input type="text" id="address" class="width-100 c-t-right" placeholder="" disabled="disabled"/>
 				</div>
 			</li>
-			<!--<li class="c-list-text c-list-link">-->
-				<!--<div class="c-list-info">-->
-					<!--<h4 class="c-nowrap">性别</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-value" id="sex"></div>-->
-			<!--</li>-->
-			<!--<li class="c-list-text c-list-link">-->
-				<!--<div class="c-list-info">-->
-					<!--<h4 class="c-nowrap">出生年月</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-value" id="birthday"></div>-->
-			<!--</li>-->
 		</ul>
 		<!-- 姓名 身份证号码 各种号码等基本信息 结束 -->
 
-		<!-- 医保卡号 开始 -->
-		<!--<ul class="c-list c-border-tb mt10">-->
-			<!--<li class="c-list-text c-list-link">-->
-				<!--<div class="c-list-info" style="width: 150px;">-->
-					<!--<h4>医保卡号</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-info c-t-right" >-->
-				    <!--<input type="text" id="ssc" class="width-100 c-t-right" placeholder="请输入医保卡号">-->
-				<!--</div>-->
-			<!--</li>-->
-		<!--</ul>-->
-		<!-- 医保卡号 结束 -->
-
 		<!-- 地址信息 开始 -->
 		<ul class="c-list c-border-tb mt10">
-			<!--<li class="c-list-text c-list-link" onclick="getProvince()">-->
-				<!--<div class="c-list-info" style="width: 150px;">-->
-					<!--<h4>省份</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-info c-t-right">-->
-					<!--<input type="text" id="province" class="width-100 c-t-right" placeholder="请选择" value="" readonly="readonly">-->
-					<!--<input id="provinceCode" value="" style="display: none;" />-->
-				<!--</div>-->
-			<!--</li>-->
-			<!--<li class="c-list-text c-list-link" onclick="getCity()">-->
-				<!--<div class="c-list-info" style="width: 150px;">-->
-					<!--<h4>城市</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-info c-t-right">-->
-					<!--<input type="text" id="city" class="width-100 c-t-right" placeholder="请选择" value="" readonly="readonly">-->
-					<!--<input id="cityCode" value="" style="display: none;" />-->
-				<!--</div>-->
-			<!--</li>-->
-			<!--<li class="c-list-text c-list-link" onclick="getTown()">-->
-				<!--<div class="c-list-info" style="width: 150px;">-->
-					<!--<h4>区县</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-info c-t-right">-->
-					<!--<input type="text" id="town" class="width-100 c-t-right" placeholder="请选择" value="" readonly="readonly">-->
-					<!--<input id="townCode" value="" style="display: none;" />-->
-				<!--</div>-->
-			<!--</li>-->
-			<!--<li class="c-list-text c-list-link" onclick="getStreet()">-->
-				<!--<div class="c-list-info" style="width: 150px;">-->
-					<!--<h4>街道</h4>-->
-				<!--</div>-->
-				<!--<div class="c-list-info c-t-right" >-->
-				    <!--<input type="text" id="street" class="width-100 c-t-right" placeholder="请选择" value="" readonly="readonly">-->
-				    <!--<input id="streetCode" value="" style="display: none;" />-->
-				<!--</div>-->
-			<!--</li>-->
-
 			<li class="c-list-text c-list-link">
 				<div class="c-list-info" style="width: 150px;">
 					<h4>联系人电话</h4>
 				</div>
 				<div class="c-list-info c-t-right" >
-					<input type="text" id="lineman" class="width-100 c-t-right" placeholder="">
+					<input type="text" id="lineman" class="width-100 c-t-right" placeholder="" disabled="disabled">
 				</div>
 			</li>
 		</ul>
