--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yishengxinxi.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/yishengxinxi.html
@@ -31,14 +31,14 @@
 
 	<body>
 		<div class="c-main">
-			<!--<div class="h45">-->
-				<!--<div class="demo-comtop">-->
-					<!---->
-					<!--&lt;!&ndash;团队成员医生信息页&ndash;&gt;-->
-					<!--<h1>医生详情</h1>-->
-				<!--</div>-->
-			<!--</div>-->
-			<a class="mui-action-back" id="mui-action-back"></a>
+			<div class="h45">
+				<div class="demo-comtop">
+                    <a class="mui-action-back" id="mui-action-back"></a>
+					<!--团队成员医生信息页-->
+					<h1>医生详情</h1>
+				</div>
+			</div>
+			<!--<a class="mui-action-back" id="mui-action-back"></a>-->
 			<div class="sdoc-top smil short clearfix">
 				<span class="sdimg fl">
 					<img id="photo" src="" class="c-images-cycle">
@@ -117,8 +117,6 @@
             function clickEvent() {
                 document.getElementById('mui-action-back').addEventListener('tap', function () {
                     closeWindow();
-//                    history.go(-1);
-//                    history.back();
                 });
             }
 		</script>
