--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
@@ -197,7 +197,7 @@
 	});
 
 	function cycture(file){//处理图片上传后回调
-		parent.location.reload();
+		//closeWindow();
 	}
 
 	var imgArea = document.querySelector(".add-img");
