--- a/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
+++ b/wlyy-yc/src/main/resources/app/html/yichangguanli/html/qianyueshenhe.html
@@ -182,6 +182,7 @@
 
 <script type="text/javascript">
 	$(function() {
+		parent.document.title="签约审核";
 		$('.main').css("max-height", ($(window).height() - 56) + "px");
 		getPatientInfo();
 		initEvent();
