--- a/wlyy-yc/src/main/resources/wx/html/qygl/html/search-community.html
+++ b/wlyy-yc/src/main/resources/wx/html/qygl/html/search-community.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<title>家庭签约-选择团队</title>
+		<title>家庭签约-选择机构</title>
 		<link rel="stylesheet" href="../../../css/cross.css" type="text/css" />
 		<link rel="stylesheet" href="../../../fonts/iconfont/iconfont.css" type="text/css" />
 		<link rel="stylesheet" type="text/css" href="../../../widget/artDialog/6.0.5/css/ui-dialog.min.css">
