--- a/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
+++ b/wlyy-yc/src/main/resources/wx/html/grzx/html/my-detail.html
@@ -11,7 +11,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<link rel="stylesheet" href="../../../css/cross.css">
 	<link rel="stylesheet" href="../../../css/cross.ui.css">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/my-detail.css">
 	<link rel="stylesheet" type="text/css" href="../../../css/ss-style.css">
 	<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<style>
@@ -108,8 +108,10 @@
 				</div>
 			</li>
 		</ul>
-
-		<!-- 地址信息 结束 -->
+		<div class="mtb20 mlr15">
+			<a id="unbunding" href="javascript:;" class="c-btn c-btn-ff3b2f c-btn-full c-btn-radius c-f18">解绑</a>
+		</div>
+			<!-- 地址信息 结束 -->
 		<div id="info" style="display:none;color: red;text-align: center"></div>
         <div id="info2" style="display:none;color: green;text-align: center"></div>
         &nbsp;
